<?xml version="1.0"?>
<package>
  <name>sony_cam</name>
  <version>0.0.0</version>
  <description>Support to Sony cameras supported by the Camera Remote API SDK</description>

  <maintainer email="alexanderm2230@gmail.com">Alexander Marin</maintainer>
  
  <license>TODO</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/sony_cam</url> -->

  <author email="alexanderm2230@gmail.com">Alexander Marin</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
